# SCENTROPY_MASTER

./: .env.example  .gitignore  QUICKSTART.md  README.md  requirements.txt
SCEnrtopy_in_VisualConceptDiscovery/scripts/: print_clustering_hierarchy.py  run_superclass_entropy.py  train_and_extract.py
SCEnrtopy_in_VisualConceptDiscovery/src/clustering/: __init__.py
SCEnrtopy_in_VisualConceptDiscovery/src/data_processing/: dataset_loader.py
SCEnrtopy_in_VisualConceptDiscovery/src/evaluation/: hsc_metrics.py
SCEnrtopy_in_VisualConceptDiscovery/src/models/: __init__.py  feature_extractor.py  model_trainer.py
SCEnrtopy_in_VisualConceptDiscovery/src/utils/: file_handler.py
SCEnrtopy_in_VisualConceptDiscovery/tests/: test_imports.py
SCEntropy_in_NLG/: question_list.txt
SCEntropy_in_NLG/NL_clustering/: .gitignore  NL_clustering.py  run_with_file.bat  setup.py  setup_model_cache.bat
SCEntropy_in_NLG/NL_clustering/src/: __init__.py  ai_interface.py  embedding_clustering.py  main_processor.py  text_processor.py
SCEntropy_in_NLG/Performance/: generate_evaluation_chart.py
SCEntropy_in_NLG/Performance/bert/: bert_evaluator.py  setup.py
SCEntropy_in_NLG/Performance/bert/src/: bert_score_calculator.py  input_manager.py
SCEntropy_in_NLG/Performance/input/: data1.txt  data10.txt  data100.txt  data11.txt  data12.txt  data13.txt  data14.txt  data15.txt  data16.txt  data17.txt  data18.txt  data19.txt  data2.txt  data20.txt  data21.txt  data22.txt  data23.txt  data24.txt  data25.txt  data26.txt  data27.txt  data28.txt  data29.txt  data3.txt  data30.txt  data31.txt  data32.txt  data33.txt  data34.txt  data35.txt  data36.txt  data37.txt  data38.txt  data39.txt  data4.txt  data40.txt  data41.txt  data42.txt  data43.txt  data44.txt  (+60 more)
SCEntropy_in_NLG/Performance/meteor/: .gitignore  meteor_evaluator.py  setup.cfg
SCEntropy_in_NLG/Performance/meteor/src/: input_manager.py  meteor_score_calculator.py
SCEntropy_in_NLG/Performance/rogue/: .gitignore  rouge_evaluator.py  setup.cfg
SCEntropy_in_NLG/Performance/rogue/src/: input_manager.py  rouge_score_calculator.py
SCEntropy_in_VisualConceptDiscovery/: config.py
SCEntropy_in_VisualConceptDiscovery/scripts/: run_experiment.py  run_hsc_evaluation.py  run_superclass_entropy.py
SCEntropy_in_VisualConceptDiscovery/src/: __init__.py
SCEntropy_in_VisualConceptDiscovery/src/clustering/: entropy_clustering.py
SCEntropy_in_VisualConceptDiscovery/src/data_processing/: __init__.py
SCEntropy_in_VisualConceptDiscovery/src/utils/: __init__.py  similarity_calculator.py
SCEntropy_in_VisualConceptDiscovery/src/visualization/: __init__.py  plots.py
(+1 files in other folders)
