[metadata]
name = rouge-evaluator
version = 1.0.0
description = A comprehensive tool for evaluating text generation models using ROUGE metrics
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing

[options]
packages = find:
python_requires = >=3.7
install_requires =
    rouge-score>=0.0.4
    typing-extensions>=3.7.4

[options.packages.find]
where = src